# nf-23

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt
src/calculator/: CMakeLists.txt  Calculator.cpp  Minus.cpp  Plus.cpp  SymbolOperationMapper.cpp  main.cpp
src/calculator/include/: Calculator.h  Minus.h  Operation.h  OperationMapper.h  Plus.h  SymbolOperationMapper.h
src/project_name/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  calculator_test.cpp  main_test.cpp
